--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wavesurfer/react": "^1.0.4",
     "curved-arrows": "^0.1.0",
     "history": "^5.3.0",
     "konva": "^9.3.5",
@@ -25,6 +26,7 @@
     "react-xarrows": "^2.0.2",
     "styled-components": "^6.1.8",
     "use-image": "^1.1.1",
+    "wavesurfer.js": "^7.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
