--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-konva": "^18.2.10",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-wavesurfer": "^0.8.6",
     "react-wavy-audio": "^1.0.3",
     "react-xarrows": "^2.0.2",
     "styled-components": "^6.1.8",
