--- a/package.json
+++ b/package.json
@@ -7,26 +7,35 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.11",
+    "@mui/lab": "^5.0.0-alpha.168",
     "@mui/material": "^5.15.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@wavesurfer/react": "^1.0.4",
+    "axios": "^1.6.8",
+    "buffer": "^6.0.3",
     "curved-arrows": "^0.1.0",
+    "dotenv": "^16.4.5",
+    "hebrew-transliteration": "^2.6.2",
     "history": "^5.3.0",
+    "immer": "^10.0.4",
     "konva": "^9.3.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-audio-visualize": "^1.1.3",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-wavesurfer": "^0.8.6",
     "react-wavy-audio": "^1.0.3",
     "react-xarrows": "^2.0.2",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "use-image": "^1.1.1",
+    "uuid": "^9.0.1",
     "wavesurfer-react": "^3.0.2",
     "wavesurfer.js": "^7.7.4",
     "web-vitals": "^2.1.4"
@@ -42,6 +51,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "browser": {
+    "crypto": false
   },
   "browserslist": {
     "production": [
