--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_SERVER_PORT='https://go-read-ochre.vercel.app/reading_assessment/'
+REACT_APP_SERVER_PORT='http://localhost:8080/reading_assessment/'
 REACT_APP_USERNAME='admin'
 REACT_APP_PASSWORD='123456'
